[package]
name = "selfdriving"
version = "0.1.0"
authors = ["Acshi Haggenmiller <acshikh@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
progressive_mcts = { path = "progressive_mcts/progressive_mcts" }
rvx = { git = "https://github.com/acshi/rvx" }
rand = "0.8.3"
parry2d-f64 = "0.5.1"
enum_dispatch = "0.3.7"
fstrings = "0.2.3"
approx = "0.5.0"
serde = "1.0.126"
rayon = "1.5.1"
itertools = "0.10.0"
config = "0.11.0"
nalgebra = "0.27.1"
ordered-float = "2.5.1"
rolling-stats = "0.4"

[profile.release]
debug = true
